--- a/app/src/main/res/layout/activity_video_desc.xml
+++ b/app/src/main/res/layout/activity_video_desc.xml
@@ -50,9 +50,9 @@
         android:background="#ffffff"
         android:fillViewport="false"
         app:layout_scrollFlags="scroll"
-        app:tabIndicatorColor="@color/black"
+        app:tabIndicatorColor="@color/text_red"
         app:tabIndicatorHeight="1.0dp"
-        app:tabSelectedTextColor="@color/black"
+        app:tabSelectedTextColor="@color/text_red"
         app:tabTextColor="#8c8c8c"
         >
     </android.support.design.widget.TabLayout>
@@ -64,7 +64,7 @@
         android:id="@+id/view_pager"
         android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="2.1"
         android:background="@color/white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
