--- a/app/src/main/res/layout/fragment_related_video.xml
+++ b/app/src/main/res/layout/fragment_related_video.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     >
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/relate_video_img"
+        android:layout_width="142dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="@dimen/dimen_10"
+        android:layout_marginRight="@dimen/dimen_10"
+        android:layout_marginTop="@dimen/dimen_8"
+        android:layout_marginBottom="@dimen/dimen_8"
+        fresco:placeholderImage= "@drawable/pic_loding"
+        fresco:placeholderImageScaleType="fitCenter"
+        />
     <RelativeLayout
-        android:id="@+id/item_intro_rl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/dimen_10"
-        android:paddingRight="@dimen/dimen_10"
-        android:paddingTop="@dimen/dimen_8"
-        android:paddingBottom="@dimen/dimen_8"
-        >
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/relate_video_img"
-            android:layout_width="142dp"
-            android:layout_height="80dp"
-            fresco:viewAspectRatio="1.78"
-            fresco:placeholderImage= "@drawable/pic_loding"
-            fresco:placeholderImageScaleType="fitCenter"
-            />
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/relate_video_img"
         android:layout_centerVertical="true"
@@ -74,4 +68,4 @@
         android:background="@color/lightgrey"
         android:visibility="gone"
         />
-</LinearLayout>
+</RelativeLayout>
