--- a/app/src/main/res/layout/layout_video_details_introduce.xml
+++ b/app/src/main/res/layout/layout_video_details_introduce.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/video_desc_title"
-        style="@style/style_common_width_height_mw"
+        android:id="@+id/video_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/dimen_10"
         android:paddingTop="@dimen/dimen_15"
         android:paddingRight="@dimen/dimen_10"
@@ -13,6 +15,145 @@
         android:textSize="@dimen/text_16"
         android:singleLine="true"
         android:textColor="#222222"
+        android:onClick="videoInfo"
         android:drawableRight="@drawable/unfold"
+        />
+    <TextView
+        android:id="@+id/tv_play"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:textSize="@dimen/text_10"
+        android:textColor="#a7a7a7"
+        android:paddingLeft="@dimen/dimen_10"
+        android:paddingTop="@dimen/dimen_5"
+        android:paddingBottom="@dimen/dimen_5"
+        android:paddingRight="@dimen/dimen_10"
+        />
+
+    <TextView
+        android:id="@+id/tv_video_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:paddingLeft="@dimen/dimen_10"
+        android:paddingRight="@dimen/dimen_3"
+        android:paddingTop="@dimen/dimen_3"
+        android:paddingBottom="@dimen/dimen_3"
+        android:ellipsize="end"
+        android:text=""
+        android:textSize="@dimen/text_13"
+        android:textColor="#6c6c6c"
+        android:singleLine="false"
+        android:background="@color/white"
+        android:lineSpacingMultiplier="1.3"
+        android:lineSpacingExtra="@dimen/dimen_1"
+        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginBottom="@dimen/dimen_5"
+        >
+        <TextView
+            android:id="@+id/tv_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_12"
+            android:drawablePadding="@dimen/dimen_10"
+            android:drawableLeft="@drawable/collect_big"
+            android:padding="@dimen/dimen_10"
+            android:gravity="center"
+            />
+        <TextView
+            android:id="@+id/tv_video_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/tv_collect"
+            android:text="缓存"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_12"
+            android:layout_marginLeft="@dimen/dimen_8"
+            android:drawablePadding="@dimen/dimen_10"
+            android:drawableLeft="@drawable/cache_big"
+            android:padding="@dimen/dimen_10"
+            android:gravity="center"
+            />
+
+        <RelativeLayout
+            android:id="@+id/video_share_btn"
+            style="@style/style_common_click_effect"
+            android:layout_toRightOf="@+id/tv_video_download"
+            android:layout_marginLeft="@dimen/dimen_8"
+            android:paddingLeft="@dimen/dimen_10"
+            android:paddingRight="@dimen/dimen_7"
+            >
+            <ImageView
+                android:id="@+id/video_share_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/share_big"
+                android:scaleType="fitCenter"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/dimen_10"
+                android:layout_marginBottom="@dimen/dimen_10"
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_16"
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/dimen_2"
+                android:layout_alignParentTop="true"
+                >
+                <TextView
+                    android:id="@+id/tv_video_share_reminde"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/dimen_2"
+                    android:paddingBottom="@dimen/dimen_2"
+                    android:paddingRight="@dimen/dimen_4"
+                    android:paddingLeft="@dimen/dimen_4"
+                    android:text="分享+经验"
+                    android:textColor="#fff"
+                    android:textSize="8sp"
+                    android:gravity="center"
+                    android:background="@drawable/bg_radius_red"/>
+                <TextView
+                    android:id="@+id/tv_video_share_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_12"
+                    android:textColor="#848484"
+                    android:text="222"
+                    android:layout_gravity="center"
+                    />
+            </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1"
+        android:background="@color/lightgrey"/>
+
+    <com.zhy.view.flowlayout.TagFlowLayout
+        android:id="@+id/tags_layout"
+        style="@style/style_common_width_height_mw"
+        android:layout_marginRight="@dimen/dimen_5"
+        android:layout_marginLeft="@dimen/dimen_10"
+        android:layout_marginTop="@dimen/dimen_5"
+        android:layout_marginBottom="@dimen/dimen_9"
+        app:max_select="-1"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_15"
+        android:background="@color/lightgrey"/>
+    <include
+        layout="@layout/item_video_channel"
         />
 </LinearLayout>
