--- a/app/src/main/res/layout/layout_video_details_introduce.xml
+++ b/app/src/main/res/layout/layout_video_details_introduce.xml
@@ -15,6 +15,8 @@
         android:textSize="@dimen/text_16"
         android:singleLine="true"
         android:textColor="#222222"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:onClick="videoInfo"
         android:drawableRight="@drawable/unfold"
         />
