--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,6 +63,7 @@
                 android:src="@drawable/btn_search"
                 android:scaleType="fitCenter"
                 android:layout_centerInParent="true"
+                android:visibility="gone"
                 />
         </RelativeLayout>
     </RelativeLayout>
