--- a/app/src/main/res/layout/item_fragment_related_video.xml
+++ b/app/src/main/res/layout/item_fragment_related_video.xml
@@ -4,6 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:id="@+id/id_related_video"
     >
 
     <com.facebook.drawee.view.SimpleDraweeView
