--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
 
     <color name="transparent">#00000000</color>
     <color name="black_20">#33000000</color>
+    <color name="login_bg">#333333</color>
 
 
 
