--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -97,6 +97,8 @@
     <dimen name="dimen_73">73dp</dimen>
     <dimen name="dimen_74">74dp</dimen>
     <dimen name="dimen_75">75dp</dimen>
+    <dimen name="dimen_80">80dp</dimen>
+    <dimen name="dimen_100">100dp</dimen>
     <dimen name="dimen_128">128dp</dimen>
     <dimen name="dimen_168">168dp</dimen>
     <dimen name="dimen_210">210dp</dimen>
