--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -18,7 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dimen_50"
         android:layout_marginRight="@dimen/dimen_50"
-        android:layout_marginTop="@dimen/dimen_100">
+        android:layout_marginTop="@dimen/dimen_20"
+        android:layout_centerInParent="true">
         <TextView
             android:id="@+id/id_phone_no"
             android:layout_width="wrap_content"
@@ -117,4 +118,4 @@
             />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
