--- a/app/src/main/res/layout/activity_video_desc.xml
+++ b/app/src/main/res/layout/activity_video_desc.xml
@@ -18,7 +18,7 @@
         <demo.soho.com.baogevideo.ui.widget.LandLayoutVideo
             android:id="@+id/detail_player"
             android:layout_width="match_parent"
-            android:layout_height="202dp"
+            android:layout_height="match_parent"
             />
         <LinearLayout
             android:id="@+id/ll_share_view"
