--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,8 @@
         android:layout_marginLeft="@dimen/dimen_50"
         android:layout_marginRight="@dimen/dimen_50"
         android:layout_centerInParent="true"
-        android:layout_marginTop="@dimen/dimen_50">
+        android:gravity="center"
+        >
         <TextView
             android:id="@+id/id_phone_no"
             android:layout_width="wrap_content"
@@ -27,38 +28,45 @@
             android:text="手机号"
             android:textColor="@color/white"
             android:textSize="@dimen/text_16"/>
-        <TextView
-            android:id="@+id/tv_area"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/id_rl_phone"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/id_phone_no"
-            android:layout_marginTop="@dimen/dimen_15"
-            android:text="+ 86"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_15"/>
-        <EditText
-            android:id="@+id/etv_user_phone"
-            style="@style/style_common_width_height_mw"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
-            android:gravity="center|left"
-            android:hint="请输入手机号"
-            android:inputType="phone"
-            android:singleLine="true"
-            android:textColorHint="@color/text_color"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:layout_toRightOf="@+id/tv_area"
-            android:background="@null"
-            android:theme="@style/MyEditText"
-            android:layout_alignBaseline="@+id/tv_area"
-            />
+            >
+            <TextView
+                android:id="@+id/tv_area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_15"
+                android:text="+ 86"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_15"/>
+            <EditText
+                android:id="@+id/etv_user_phone"
+                style="@style/style_common_width_height_mw"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:gravity="center|left"
+                android:hint="请输入手机号"
+                android:inputType="phone"
+                android:singleLine="true"
+                android:textColorHint="@color/text_color"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:layout_toRightOf="@+id/tv_area"
+                android:background="@null"
+                android:theme="@style/MyEditText"
+                android:layout_alignBaseline="@+id/tv_area"
+                />
+        </RelativeLayout>
+
         <TextView
             android:id="@+id/tv_line"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
             android:layout_marginTop="@dimen/dimen_5"
-            android:layout_below="@+id/etv_user_phone"
+            android:layout_below="@+id/id_rl_phone"
             android:background="@color/lightgrey"/>
 
         <TextView
@@ -78,13 +86,15 @@
             android:layout_below="@+id/tv_code"
             android:layout_marginTop="@dimen/dimen_5"
             android:gravity="center|left"
-            android:hint=""
+            android:hint="请输入密码"
             android:singleLine="true"
             android:textColorHint="@color/text_color"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:theme="@style/MyEditText"
             />
+
+
         <!--<TextView-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="@dimen/dimen_1"-->
