--- a/app/src/main/res/layout/item_fragment_video_channel.xml
+++ b/app/src/main/res/layout/item_fragment_video_channel.xml
@@ -17,7 +17,7 @@
         fresco:roundAsCircle="true"
         fresco:roundingBorderWidth="@dimen/dimen_2"
         fresco:actualImageScaleType="focusCrop"
-        fresco:placeholderImage= "@mipmap/ic_launcher"
+        fresco:placeholderImage= "@drawable/ic_launcher"
         fresco:placeholderImageScaleType="fitCenter"
         />
     <RelativeLayout
