--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
 
     <RelativeLayout
+        android:id="@+id/rl_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="50dp"
+        >
         <ImageButton
             android:id="@+id/id_back"
             android:layout_width="wrap_content"
@@ -39,11 +41,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1"
+        android:layout_below="@+id/rl_title"
         android:background="@color/lightgrey"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/rl_title"
         >
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
@@ -52,5 +56,4 @@
             android:layout_height="wrap_content"
             />
     </android.support.v4.widget.SwipeRefreshLayout>
-
-</LinearLayout>
+</RelativeLayout>
