--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,13 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="V1.0.0"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_14"
-        />
+    <View
+        android:background="#222222"
+        android:id="@+id/view_divider"
+        android:layout_height="3dp"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
