--- a/app/src/main/res/layout/tab_user_menuview.xml
+++ b/app/src/main/res/layout/tab_user_menuview.xml
@@ -6,23 +6,10 @@
     android:background="#eeeeee"
     >
     <TextView
-        android:id="@+id/tv_user_level"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="用户等级说明"
-        android:padding="@dimen/dimen_15"
-        android:textColor="@color/text_color"
-        android:background="@color/white"
-        android:drawableLeft="@drawable/user_grade"
-        android:drawablePadding="@dimen/dimen_10"
-        android:layout_marginTop="@dimen/dimen_10"
-        android:visibility="gone"
-        />
-    <TextView
         android:id="@+id/tv_cache"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="我的缓存"
+        android:text="轮播广告"
         android:textColor="@color/text_color"
         android:textSize="@dimen/text_15"
         android:padding="@dimen/dimen_15"
@@ -43,13 +30,25 @@
         android:padding="@dimen/dimen_15"
         android:layout_marginTop="@dimen/dimen_1"
         android:drawableLeft="@drawable/user_collect"
-        android:drawablePadding="@dimen/dimen_10"/>
-
+        android:drawablePadding="@dimen/dimen_10"
+        android:visibility="gone"/>
     <TextView
-        android:id="@+id/tv_play_history"
+        android:id="@+id/tv_video_adv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="观看历史"
+        android:text="视频广告"
+        android:padding="@dimen/dimen_15"
+        android:textColor="@color/text_color"
+        android:background="@color/white"
+        android:drawableLeft="@drawable/user_grade"
+        android:drawablePadding="@dimen/dimen_10"
+        android:layout_marginTop="@dimen/dimen_1"
+        />
+    <TextView
+        android:id="@+id/tv_show_slideable_spot_ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="轮播插屏广告"
         android:textSize="@dimen/text_15"
         android:textColor="@color/text_color"
         android:padding="@dimen/dimen_15"
@@ -57,13 +56,13 @@
         android:drawablePadding="@dimen/dimen_10"
         android:background="@color/white"
         android:layout_marginTop="@dimen/dimen_1"
-        android:visibility="gone"/>
+        />
 
     <TextView
         android:id="@+id/tv_response"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="回复我的"
+        android:text="积分余额"
         android:textSize="@dimen/text_15"
         android:textColor="@color/text_color"
         android:padding="@dimen/dimen_15"
@@ -71,7 +70,7 @@
         android:drawablePadding="@dimen/dimen_10"
         android:background="@color/white"
         android:layout_marginTop="@dimen/dimen_10"
-        android:visibility="gone"/>
+        />
 
     <TextView
         android:id="@+id/tv_thump_up"
@@ -112,7 +111,8 @@
         android:drawableLeft="@drawable/setting"
         android:drawablePadding="@dimen/dimen_10"
         android:background="@color/white"
-        android:layout_marginTop="@dimen/dimen_1"/>
+        android:layout_marginTop="@dimen/dimen_1"
+        android:layout_marginBottom="@dimen/dimen_80"/>
 
 
 </LinearLayout>
